--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,15 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^8.5.0
+  # cached_network_image: ^1.1.1
+  story_view: ^0.10.0
+  swipedetector: ^1.2.0
+  cached_network_image: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_emoji: ">= 2.0.0"
-  firebase_auth: ^0.11.1+7
-  firebase_database: ^3.0.3
-  cloud_firestore: ^0.12.6
 
 dev_dependencies:
   flutter_test:
@@ -39,13 +40,11 @@ flutter_icons:
   image_path: "lib/assets/icon/icon.png"
   adaptive_icon_background: "#ffffff"
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -56,13 +55,10 @@ flutter:
     - lib/assets/images/post1.jpeg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
